<resources>
  <string name="app_name">Reader</string>
  <string name="search">Suchen</string>
  <string name="filter">Filter</string>
  <string name="home">Home</string>
  <string name="settings">Einstellungen</string>
  <string name="articles">Meine Artikel</string>
  <string name="title_add_article">Hinzufügen</string>
  <string name="ok">Ok</string>
  <string name="about">Impressum</string>
  <string name="add_article_url_helpertext">Artikel wird heruntergeladen und in der App gespeichert</string>


  <string name="article_action_fontsize">Schriftgröße</string>
  <string name="article_action_favorite">favorite</string>
  <string name="article_action_delete">Artikel löschen</string>
  <string name="article_action_share">Artikel teilen</string>
  <string name="article_search">Artikel durchsuchen</string>


  <string name="article_list">Artikel</string>
  <string name="last_added">Zuletzt hinzugefügt</string>
  <string name="favorites">Favoriten</string>
  <string name="categories">Kategorien</string>
  <string name="show_all">Alle anzeigen</string>
  <string name="category">Kategorie</string>
  <string name="url">Url</string>
  <string name="add_article_category_helpertext">(optional)</string>
  <string name="hint_search_articles">Artikel durchsuchen</string>

  <string name="categories_all">Alle Kategorien</string>
  <string name="category_hint">Kategorie</string>
  <string name="cancel">abbrechen</string>
  <string name="message_delete">Möchten Sie den Artikel wirklich löschen?</string>
  <string name="delete_article">Artikel löschen</string>
  <string name="theme_auto">automatisch</string>
  <string name="theme_light">hell</string>
  <string name="theme_dark">dunkel</string>
  <string name="settings_theme_dialog_title">Theme auswählen</string>
  <string name="article_action_fullscreen">vollbild</string>

  <string-array name="array_themes">
    <item>Hell</item>
    <item>Dunkel</item>
    <item>Automatisch</item>
  </string-array>

</resources>
